# python-for-beginners

./: pyproject.toml
#2/#2.1 Variables/: main.py
#2/#2.10 Return Values/: main.py
#2/#2.11 Return Recap/: main.py
#2/#2.2 Booleans and Strings/: main.py
#2/#2.4 Functions/: main.py
#2/#2.5 Indentation/: main.py
#2/#2.6 Parameters/: main.py
#2/#2.7 Multiple Parameters/: main.py
#2/#2.8 Recap/: main.py
#2/#2.9 Default Parameters/: main.py
#3/#3.0 If/: main.py
#3/#3.1 Else & Elif/: main.py
#3/#3.3 And & Or/: main.py
#3/#3.4 Python Standard Library/: main.py
#3/#3.5 While/: main.py
#3/#3.6 Python Casino/: main.py
#4/#4.0 Methods/: main.py
#4/#4.1 Lists/: main.py
#4/#4.2 Tuples/: main.py
#4/#4.3 Dicts/: main.py
#4/#4.5 For Loops/: main.py
#4/#4.6 URL Formatting/: main.py
#4/#4.7 Requests/: main.py
#4/#4.8 Status Codes/: main.py
#5/#5.3 Initial Request/: main.py
#5/#5.4 BeautifulSoup/: main.py
#5/#5.5 Keyword Arguments/: main.py
#5/#5.6 Job Posts/: main.py
#5/#5.7 Job Extraction/: main.py
#5/#5.8 Saving Results/: main.py
Assignment/#03/: main.py
Assignment/#07/: main.py
